# FL_Demos

./: .gitignore  Orchestrator.ipynb  Orchestrator_MNIST.ipynb  Pytorch_MedMNIST_3D_Flower.ipynb  README.md  requirements-workshop.txt  start_superlink.sh  start_supernode.sh  workshop_helpers.py
fl_app/: pyproject.toml
fl_app/fl_app/: client_app.py  server_app.py  task.py
fl_app_mnist/: pyproject.toml
fl_app_mnist/fl_app_mnist/: client_app.py  server_app.py  task.py
real_fed/: Orchestrator_MedMNIST3D.ipynb
real_fed/fl_medmnist3d/: pyproject.toml
real_fed/fl_medmnist3d/fl_medmnist3d/: client_app.py  server_app.py  task.py
