[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-medmnist3d"
version = "1.0.0"
description = "Federated Learning on MedMNIST 3D (SynapseMNIST3D) with Flower"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flwr>=1.15.0,<2.0.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "medmnist>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fl_medmnist3d"]

# ── Flower App ────────────────────────────────────────────────────────────────
[tool.flwr.app]
publisher = "demo"

[tool.flwr.app.components]
serverapp = "fl_medmnist3d.server_app:app"
clientapp = "fl_medmnist3d.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3   # federation rounds
min-clients       = 2   # SuperNodes required before starting
num-partitions    = 2   # must match the number of SuperNodes
local-epochs      = 1
learning-rate     = 0.001
